UNAO-329 fixed word wrapping issue for reviewed by block n mobile
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@1481 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css/article.css
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css/article.css
@@ -2324,6 +2324,11 @@
     -ms-word-wrap: break-word;
     word-wrap: break-word;
 }
+
+p.reviewed-by{
+    -ms-word-wrap: normal;
+    word-wrap: normal;
+}
 @media (min-width: 650px) {
   /* line 8, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-copy.scss */
   .article p {
